--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "ranking-list",
+  "name": "ranking",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
